# vidio

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/vidio_cli/: __init__.py  cli.py  config.py  ffmpeg_utils.py
src/vidio_cli/commands/: __init__.py  concat.py  crop.py  grid.py  info.py  list.py  resize.py  to_gif.py  trim.py
tests/: conftest.py  test_cli.py  test_concat.py  test_crop.py  test_grid.py  test_info.py  test_list.py  test_resize.py  test_to_gif.py  test_trim.py
