[project]
name = "vidio-cli"
version = "0.1.0"
description = "A simple and easy-to-use ffmpeg wrapper for common video operations"
readme = "README.md"
authors = [
    { name = "Matan Ben-Yosef", email = "matan.ben.yosef@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[project.scripts]
vidio = "vidio_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
