[project]
name = "vidio-cli"
version = "0.1.0"
description = "A simple and easy-to-use ffmpeg wrapper for common video operations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Matan Ben-Yosef", email = "matan.ben.yosef@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["video", "ffmpeg", "cli", "media", "gif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.5.0",
]

[project.urls]
Homepage = "https://github.com/matanb/vidio-cli"
Repository = "https://github.com/matanb/vidio-cli"
Issues = "https://github.com/matanb/vidio-cli/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[project.scripts]
vidio = "vidio_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require ffmpeg and real media assets",
]
